2005-07-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd-xds.c: added missing casts.

2005-07-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp-drawable.c: revert to old behavior of
	parasite_find functions returning None when there isn't a parasite
	found. Fixed bug #310666.

2005-07-17  Nathan Summers  <rock@gimp.org>

	* libgimpwidgets/gimpresolutionentry.[ch]: spiffy new widget that given
	a physical size, displays that size in an arbitrary unit, and lets
	you select a resolution via changing either the corresponding width
	and height or specifying it directly in pixels per your chosen unit.
	
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.def 
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h: added appropriate files, function,
	headers, and types, respectively

	* devel-docs/libgimpwidgets/libgimpwidgets.types: added
	gimp_resolution_entry_get_type.  A section still needs to be created
	for it.
	
	* plug-ins/common/poppler.c (run): bugfix that accidentally wasn't
	merged in previous commit.

	* plug-ins/common/poppler.c (load_dialog): replaced resolution
	spinbutton with a GimpResolutionEntry.

2005-07-16  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: added comments about possible improvements.

2005-07-16  Nathan Summers  <rock@gimp.org>

	* plug-ins/common/poppler.c: merged in all the changes in my 
	current gimp-poppler tree that don't need c++ or cause regressions.
	Insignificant code cleanups.
	
	* plug-ins/common/poppler.c (load_dialog): display title of pdf
	at the top of the dialog, and show the page labels in the page
	selector.  The loop for the page labels might be profitably moved
	into another thread, but I haven't actually timed how long it takes
	to be sure.

2005-07-16  Nathan Summers  <rock@gimp.org>

	* plug-ins/common/plugin-defs.pl: added poppler
	
	* plug-ins/common/mkgen.pl: add poppler's CFLAGS, and make the 