@@ -125,7 +125,8 @@ query (void)
                           load_args, load_return_vals);
 
   gimp_plugin_icon_register ("file_pat_load",
-                             GIMP_ICON_TYPE_STOCK_ID, GIMP_STOCK_PATTERN);
+                             GIMP_ICON_TYPE_STOCK_ID,
+                             (const guchar *) GIMP_STOCK_PATTERN);
   gimp_register_file_handler_mime ("file_pat_load", "image/x-gimp-pat");
   gimp_register_magic_load_handler ("file_pat_load",
 				    "pat",
@@ -146,7 +147,8 @@ query (void)
                           save_args, NULL);
 
   gimp_plugin_icon_register ("file_pat_save",
-                             GIMP_ICON_TYPE_STOCK_ID, GIMP_STOCK_PATTERN);
+                             GIMP_ICON_TYPE_STOCK_ID,
+                             (const guchar *) GIMP_STOCK_PATTERN);
   gimp_register_file_handler_mime ("file_pat_save", "image/x-gimp-pat");
   gimp_register_save_handler ("file_pat_save", "pat", "");
 }
