@@ -155,7 +155,8 @@ query (void)
   gimp_plugin_menu_register ("plug_in_unit_editor",
                              "<Toolbox>/Xtns/Extensions");
   gimp_plugin_icon_register ("plug_in_unit_editor",
-                             GIMP_ICON_TYPE_STOCK_ID, GIMP_STOCK_TOOL_MEASURE);
+                             GIMP_ICON_TYPE_STOCK_ID,
+                             (const guchar *) GIMP_STOCK_TOOL_MEASURE);
 }
 
 static void
